# clothes

./: .env.example  .gitignore  AI穿搭推荐APP设计规范.md  README.md  package-lock.json  package.json  tsconfig.json
android/: README.md  (+2 more)
backend/: README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  fashion_director.py  fit_critic.py  graph.py  image_prompt.py  image_qc_judge.py  photo_profiler.py  preference_resolver.py  product_normalizer.py  product_scout.py  quality_gates.py  recovery.py  state.py  stylist_composer.py  tryon_generator.py
backend/app/api/: routes.py
backend/app/evals/: __init__.py  quality_cases.py
backend/app/providers/: __init__.py  auth.py  google_auth.py  image.py  object_store.py  observability.py  outfit_planner.py  persistence.py  postgres.py  product_content.py  query_planner.py  search.py  storage.py  taobao_category_catalog.py  tracing.py  vision.py
backend/app/schemas/: __init__.py  auth.py  domain.py  favorites.py  product.py  quality.py  results.py
backend/app/services/: container.py  task_service.py
backend/app/static/: app.js  index.html  styles.css
backend/migrations/: 001_initial.sql
backend/tests/: test_agent_graph.py  test_auth.py  test_container_persistence.py  test_favorites_api.py  test_favorites_repository.py  test_image_provider.py  test_migration_sql.py  test_model_decision_chain.py  test_postgres_persistence.py  test_product_surfaces.py  test_quality_gates.py  test_repository_cleanup.py  test_search_provider.py  test_storage.py  test_vision_provider.py
(+112 files in other folders)
