[project]
name = "clothes-agent-backend"
version = "0.1.0"
description = "Production-oriented AI styling backend with workflow orchestration, explicit agent graph, and quality gates."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "google-auth>=2.35.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "temporalio>=1.7.0",
  "langgraph>=0.2.0",
  "psycopg[binary]>=3.2.0",
  "pgvector>=0.3.0",
  "boto3>=1.34.0",
  "openai>=1.40.0",
  "playwright>=1.45.0",
  "opentelemetry-api>=1.26.0",
  "opentelemetry-sdk>=1.26.0",
  "langsmith>=0.1.100"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0"
]

[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.mypy]
python_version = "3.12"
plugins = []
strict = true
warn_unused_ignores = true
warn_return_any = true
